; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_d3d8.c_d3d8_set_mvp.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_d3d8.c_d3d8_set_mvp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3d_matrix = type { i32 }

@D3DTS_PROJECTION = common dso_local global i32 0, align 4
@D3DTS_VIEW = common dso_local global i32 0, align 4
@D3DTS_WORLD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @d3d8_set_mvp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.d3d_matrix, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = ptrtoint i8* %7 to i32
  store i32 %8, i32* %6, align 4
  %9 = call i32 @d3d_matrix_identity(%struct.d3d_matrix* %5)
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @D3DTS_PROJECTION, align 4
  %12 = bitcast %struct.d3d_matrix* %5 to i32*
  %13 = call i32 @d3d8_set_transform(i32 %10, i32 %11, i32* %12)
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @D3DTS_VIEW, align 4
  %16 = bitcast %struct.d3d_matrix* %5 to i32*
  %17 = call i32 @d3d8_set_transform(i32 %14, i32 %15, i32* %16)
  %18 = load i8*, i8** %4, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %2
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @d3d_matrix_transpose(%struct.d3d_matrix* %5, i8* %21)
  br label %23

23:                                               ; preds = %20, %2
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* @D3DTS_WORLD, align 4
  %26 = bitcast %struct.d3d_matrix* %5 to i32*
  %27 = call i32 @d3d8_set_transform(i32 %24, i32 %25, i32* %26)
  ret void
}

declare dso_local i32 @d3d_matrix_identity(%struct.d3d_matrix*) #1

declare dso_local i32 @d3d8_set_transform(i32, i32, i32*) #1

declare dso_local i32 @d3d_matrix_transpose(%struct.d3d_matrix*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
